--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alecto</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -18,60 +19,43 @@
         <img src="img/alecto-.png">
     </a>
     <ul>
-        <li>home</li>
-        <li>about</li>
-        <li>work</li>
-        <li>services</li>
-        <li>blog</li>
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">work</a></li>
+        <li><a href="#">services</a></li>
+        <li><a href="#">blog</a></li>
         <li><img src="img/searchj.png" class="search-icon"></li>
     </ul>
     </div>
 </nav>
-    <section>
-        <div class="container-fluid">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                    <li data-target="#myCarousel" data-slide-to="4"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="https://images.unsplash.com/photo-1487581424120-18f3611a63e6?dpr=0.8333333730697632&auto=format&fit=crop&w=2000&h=900&q=80&cs=tinysrgb&crop=&bg="
-                             alt="map" class="img-responsive">
-                    </div>
-                    <div class="item">
-                        <img src="https://images.unsplash.com/photo-1473625247510-8ceb1760943f?dpr=0.8333333730697632&auto=format&fit=crop&w=2000&h=900&q=80&cs=tinysrgb&crop=&bg="
-                             alt="man" class="img-responsive">
-                    </div>
-                    <div class="item">
-                        <img src="https://images.unsplash.com/photo-1460134846237-51c777df6111?dpr=0.8333333730697632&auto=format&fit=crop&w=2000&h=900&q=80&cs=tinysrgb&crop=&bg="
-                             alt="camera" class="img-responsive">
-                    </div>
-                    <div class="item">
-                        <img src="https://images.unsplash.com/photo-1466838931486-92f3b5ff31a6?dpr=0.8333333730697632&auto=format&fit=crop&w=2000&h=900&q=80&cs=tinysrgb&crop=&bg="
-                             alt="bike" class="img-responsive">
-                    </div>
-                    <div class="item">
-                        <img src="https://images.unsplash.com/photo-1466903001289-713a94ef08df?dpr=0.8333333730697632&auto=format&fit=crop&w=2000&h=900&q=80&cs=tinysrgb&crop=&bg="
-                             alt="city" class="img-responsive">
-                    </div>
-                </div>
-                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-            </div>
-        </div>
-
-    </section>
+    <!--<section>-->
+        <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">-->
+            <!--<ol class="carousel-indicators">-->
+                <!--<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+                <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+                <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+            <!--</ol>-->
+            <!--<div class="carousel-inner">-->
+                <!--<div class="carousel-item active">-->
+                    <!--<img class="d-block w-100" src="..." alt="First slide">-->
+                <!--</div>-->
+                <!--<div class="carousel-item">-->
+                    <!--<img class="d-block w-100" src="..." alt="Second slide">-->
+                <!--</div>-->
+                <!--<div class="carousel-item">-->
+                    <!--<img class="d-block w-100" src="..." alt="Third slide">-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
+                <!--<span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+                <!--<span class="sr-only">Previous</span>-->
+            <!--</a>-->
+            <!--<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
+                <!--<span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+                <!--<span class="sr-only">Next</span>-->
+            <!--</a>-->
+        <!--</div>-->
+    <!--</section>-->
 </header>
 
 <div class="container">
@@ -83,29 +67,29 @@
     </div>
 </div>
     <div class="row">
-        <div class="col circle-rocket">
+        <div class="col-sm-12 col-md-6 col-lg-3 circle-rocket">
         <div class="grey-circle"><img src="img/rocket.png"></div>
             <span class="lo-ip-cirle">Lorem ipsum</span><br/>
             <span class="text-circle">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</span>
         </div>
-        <div class="col circle-atom">
+        <div class="col-sm-12 col-md-6 col-lg-3 circle-atom">
             <div class="grey-circle"><img src="img/atom.png"></div>
             <span class="lo-ip-cirle">Lorem ipsum</span><br/>
             <span class="text-circle">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</span>
         </div>
-        <div class="col circle-acitivity">
+        <div class="col-sm-12 col-md-6 col-lg-3 circle-acitivity">
             <div class="grey-circle"><img src="img/activity.png"></div>
             <span class="lo-ip-cirle">Lorem ipsum</span><br/>
             <span class="text-circle">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</span>
         </div>
-        <div class="col circle-cup">
+        <div class="col-sm-12 col-md-6 col-lg-3 circle-cup">
             <div class="grey-circle"><img src="img/graduation-cap.png"></div>
             <span class="lo-ip-cirle">Lorem ipsum</span><br/>
             <span class="text-circle">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</span>
         </div>
     </div>
     <button type="button" class="button-learn-more">Learn more</button>
-    <div class="row">
+    <div class="row left-photo">
         <div class="col"></div>
         <div class="col">
             <span>Lorem Ipsum</span>
@@ -117,7 +101,7 @@
             </span>
         </div>
     </div>
-    <div class="row">
+    <div class="row right-photo">
         <div class="col">
             <span>Dolor sit amet</span>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -129,11 +113,12 @@
         </div>
         <div class="col"></div>
     </div>
+
 <div class="row">
     <div class="col-sm">
-        <h2>Our Services</h2>
+        <h2 class="text-about-us">Our Services</h2>
         <div class="green-line"> </div>
-        <p>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+        <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
     </div>
 </div>
     <div class="row">
@@ -146,9 +131,9 @@
     </div>
     <div class="row">
         <div class="col-sm">
-            <h2>Meet our team</h2>
+            <h2 class="text-about-us">Meet our team</h2>
             <div class="green-line"> </div>
-            <p>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
         </div>
     </div>
     <div class="row">
@@ -167,16 +152,64 @@
     </div>
     <div class="row">
         <div class="col-sm">
-            <h2>Pricing</h2>
+            <h2 class="text-about-us">Pricing</h2>
             <div class="green-line"> </div>
-            <p>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
         </div>
     </div>
     <div class="row">
-        <div class="col">1</div>
-        <div class="col">2</div>
-        <div class="col">3</div>
-        <div class="col">4</div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+            <span>29$</span>
+            <div class="grey-line"></div>
+            <p>Lorem ipsum license</p>
+            <span>Lorem ipsum dolor sit amet
+            consectetur adipiscing elit
+            Ante sed interdum labortis
+            Est nisi efficitur lactus</span>
+            <div class="green-box-shop">
+                <span>purchase</span>
+                <span><img src="img/icon.png"></span>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+            <span>29$</span>
+            <div class="grey-line"></div>
+            <p>Lorem ipsum license</p>
+            <span>Lorem ipsum dolor sit amet
+            consectetur adipiscing elit
+            Ante sed interdum labortis
+            Est nisi efficitur lactus</span>
+            <div class="green-box-shop">
+                <span>purchase</span>
+                <span><img src="img/icon.png"></span>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+            <span>29$</span>
+            <div class="grey-line"></div>
+            <p>Lorem ipsum license</p>
+            <span>Lorem ipsum dolor sit amet
+            consectetur adipiscing elit
+            Ante sed interdum labortis
+            Est nisi efficitur lactus</span>
+            <div class="green-box-shop">
+                <span>purchase</span>
+                <span><img src="img/icon.png"></span>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+            <span>29$</span>
+            <div class="grey-line"></div>
+            <p>Lorem ipsum license</p>
+            <span>Lorem ipsum dolor sit amet
+            consectetur adipiscing elit
+            Ante sed interdum labortis
+            Est nisi efficitur lactus</span>
+            <div class="green-box-shop">
+                <span>purchase</span>
+                <span><img src="img/icon.png"></span>
+            </div>
+        </div>
     </div>
     <div class="row">
         <div class="col">
@@ -190,6 +223,25 @@
         </div>
         <div class="col"></div>
     </div>
+    <div class="row">
+        <div class="col try-psd">
+            <span>Try our PSD template on symu.co</span>
+            <button type="button" class="button-footer">symu.co/freebies</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <span class="footer-text">All Rights Reserved by Alecto</span>
+            <ul class="li-footer">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">work</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">blog</a></li>
+                <li><img src="img/searchj.png" class="search-icon"></li>
+            </ul>
+        </div>
+    </div>
 
 </div>
 
@@ -198,6 +250,8 @@
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
 
