--- a/index.html
+++ b/index.html
@@ -5,70 +5,98 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Alecto</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
+    <title>A l e c t o</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <header>
-<nav class="nav navbar-fixed-top">
-    <div class="container-fluid">
-    <a href="#" class="logo-img">
-        <img src="img/alecto-.png">
-    </a>
-    <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">work</a></li>
-        <li><a href="#">services</a></li>
-        <li><a href="#">blog</a></li>
-        <li><img src="img/searchj.png" class="search-icon"></li>
-    </ul>
+    <!--nav-->
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <a class="navbar-brand" href="#"> <img src="img/alecto-.png" alt="alecto brand"></a>
+        <button class="navbar-toggler navbar-toggler-custom" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse navbar-collapse-custom" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT</a>
+                </li>
+                <li class="nav-item dropdown">
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">WORK</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">SERVICES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">BLOG</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><img src="img/searchj.png" class="search-icon"></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!--end of nav-->
+
+    <!--carousel-->
+    <div id="carouselExampleIndicators" class="carousel slide carousel-custom" data-ride="carousel">
+        <div class="carousel-caption carousel-caption-custom d-none d-md-block">
+            <h5 class="text-header"><b>Alecto</b> is simple PSD Template</h5>
+            <p class="p-header">Nam varius accumsan elementum aliquam</p>
+            <button type="button" class="button-header">LEARN MORE</button>
+        </div>
+
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/background.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/background.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/background.png" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-</nav>
-    <!--<section>-->
-        <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">-->
-            <!--<ol class="carousel-indicators">-->
-                <!--<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
-                <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
-                <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
-            <!--</ol>-->
-            <!--<div class="carousel-inner">-->
-                <!--<div class="carousel-item active">-->
-                    <!--<img class="d-block w-100" src="..." alt="First slide">-->
-                <!--</div>-->
-                <!--<div class="carousel-item">-->
-                    <!--<img class="d-block w-100" src="..." alt="Second slide">-->
-                <!--</div>-->
-                <!--<div class="carousel-item">-->
-                    <!--<img class="d-block w-100" src="..." alt="Third slide">-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
-                <!--<span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Previous</span>-->
-            <!--</a>-->
-            <!--<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
-                <!--<span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Next</span>-->
-            <!--</a>-->
-        <!--</div>-->
-    <!--</section>-->
+
+    <!--end of carousel in header-->
 </header>
 
 <div class="container">
-<div class="row">
-    <div class="col-sm">
-    <h2 class="text-about-us">About us</h2>
-    <div class="green-line"> </div>
-    <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+    <div class="row">
+        <div class="col-sm">
+            <h2 class="text-about-us">About us</h2>
+            <div class="green-line"></div>
+            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                scelerisque.</p>
+        </div>
     </div>
-</div>
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-3 circle-rocket">
-        <div class="grey-circle"><img src="img/rocket.png"></div>
+            <div class="grey-circle"><img src="img/rocket.png"></div>
             <span class="lo-ip-cirle">Lorem ipsum</span><br/>
             <span class="text-circle">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</span>
         </div>
@@ -94,67 +122,70 @@
         <div class="col">
             <span>Lorem Ipsum</span>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
-                Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
-                Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
-            <button type="button" class="button-learn-more">Learn more</button>
-            </span>
+Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
+Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
+Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
+<button type="button" class="button-learn-more">Learn more</button>
+</span>
         </div>
     </div>
     <div class="row right-photo">
         <div class="col">
             <span>Dolor sit amet</span>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
-                Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
-                Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
-            <button type="button" class="button-learn-more">Learn more</button>
-            </span>
+Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
+Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
+Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
+<button type="button" class="button-learn-more">Learn more</button>
+</span>
         </div>
         <div class="col"></div>
     </div>
 
-<div class="row">
-    <div class="col-sm">
-        <h2 class="text-about-us">Our Services</h2>
-        <div class="green-line"> </div>
-        <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
-    </div>
-</div>
     <div class="row">
-    <div class="col"></div>
-    <div class="col"></div>
+        <div class="col-sm">
+            <h2 class="text-about-us">Our Services</h2>
+            <div class="green-line"></div>
+            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                scelerisque.</p>
+        </div>
     </div>
     <div class="row">
-    <div class="col"></div>
-    <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+    </div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
     </div>
     <div class="row">
         <div class="col-sm">
             <h2 class="text-about-us">Meet our team</h2>
-            <div class="green-line"> </div>
-            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+            <div class="green-line"></div>
+            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                scelerisque.</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm squre">1</div>
-        <div class="col-sm squre">2</div>
-        <div class="col-sm squre">3</div>
-        <div class="col-sm squre">4</div>
-        <div class="col-sm squre">5</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">1</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">2</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">3</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">4</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">5</div>
     </div>
     <div class="row">
-        <div class="col-sm">1</div>
-        <div class="col-sm">2</div>
-        <div class="col-sm">3</div>
-        <div class="col-sm">4</div>
-        <div class="col-sm">5</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">1</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">2</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">3</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">4</div>
+        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">5</div>
     </div>
     <div class="row">
         <div class="col-sm">
             <h2 class="text-about-us">Pricing</h2>
-            <div class="green-line"> </div>
-            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</p>
+            <div class="green-line"></div>
+            <p class="text-about-us-2">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
+                scelerisque.</p>
         </div>
     </div>
     <div class="row">
@@ -163,9 +194,9 @@
             <div class="grey-line"></div>
             <p>Lorem ipsum license</p>
             <span>Lorem ipsum dolor sit amet
-            consectetur adipiscing elit
-            Ante sed interdum labortis
-            Est nisi efficitur lactus</span>
+                consectetur adipiscing elit
+                Ante sed interdum labortis
+                Est nisi efficitur lactus</span>
             <div class="green-box-shop">
                 <span>purchase</span>
                 <span><img src="img/icon.png"></span>
@@ -176,9 +207,9 @@
             <div class="grey-line"></div>
             <p>Lorem ipsum license</p>
             <span>Lorem ipsum dolor sit amet
-            consectetur adipiscing elit
-            Ante sed interdum labortis
-            Est nisi efficitur lactus</span>
+                consectetur adipiscing elit
+                Ante sed interdum labortis
+                Est nisi efficitur lactus</span>
             <div class="green-box-shop">
                 <span>purchase</span>
                 <span><img src="img/icon.png"></span>
@@ -189,9 +220,9 @@
             <div class="grey-line"></div>
             <p>Lorem ipsum license</p>
             <span>Lorem ipsum dolor sit amet
-            consectetur adipiscing elit
-            Ante sed interdum labortis
-            Est nisi efficitur lactus</span>
+                consectetur adipiscing elit
+                Ante sed interdum labortis
+                Est nisi efficitur lactus</span>
             <div class="green-box-shop">
                 <span>purchase</span>
                 <span><img src="img/icon.png"></span>
@@ -202,9 +233,9 @@
             <div class="grey-line"></div>
             <p>Lorem ipsum license</p>
             <span>Lorem ipsum dolor sit amet
-            consectetur adipiscing elit
-            Ante sed interdum labortis
-            Est nisi efficitur lactus</span>
+                consectetur adipiscing elit
+                Ante sed interdum labortis
+                Est nisi efficitur lactus</span>
             <div class="green-box-shop">
                 <span>purchase</span>
                 <span><img src="img/icon.png"></span>
@@ -215,11 +246,11 @@
         <div class="col">
             <span>Dolor sit amet</span>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
-                Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
-                Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
-            <button type="button" class="button-learn-more">Learn more</button>
-            </span>
+Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
+Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
+Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
+<button type="button" class="button-learn-more">Learn more</button>
+</span>
         </div>
         <div class="col"></div>
     </div>
@@ -246,12 +277,13 @@
 </div>
 
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-        crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
 
