--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>A l e c t o</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -273,8 +273,8 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
     <!--</div>-->
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 text-map">
-            <span>Dolor sit amet</span>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <span class="text-map1">Dolor sit amet</span><br/>
+            <span class="text-map2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
 Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
 Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
@@ -285,7 +285,7 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
     </div>
     <div class="row">
         <div class="col try-psd">
-            <span>Try our PSD template on symu.co</span>
+            <span class="text-try">Try our PSD template on symu.co</span>
             <button type="button" class="button-footer">symu.co/freebies</button>
         </div>
     </div>
@@ -298,7 +298,6 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
                 <li><a href="#">work</a></li>
                 <li><a href="#">services</a></li>
                 <li><a href="#">blog</a></li>
-                <li><img src="img/searchj.png" class="search-icon"></li>
             </ul>
         </div>
     </div>
